test/classes/delete-free/owned/owned-implicit-copy-const-error.good
owned-implicit-copy-const-error.chpl:2: In function 'f':
owned-implicit-copy-const-error.chpl:3: error: const actual is passed to 'ref' formal 'src' of implicit copy initializer
note: to formal of type _owned(MyClass)
